--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -6,10 +6,11 @@ body {
   background-color: #f3f3f3;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  color: #76c7c0;
+  color: #00385A;
+  font-weight: 300;
 }
 h2, .h2 {
-  font-size: 24px;
+  font-size: 36px;
 }
 .tab-pane li {
   margin-bottom: 15px;
@@ -81,6 +82,9 @@ select {
 .alert-info a {
   color: #fff;
 }
+.mb50 {
+  margin-bottom: 50px;
+}
 .bold {
   font-weight: 700;
 }
@@ -91,8 +95,8 @@ table a {
   margin-bottom: 0px;
 }
 .navbar-default, .menu {
-  background-color: #2dc8c2;
-  border-color: #2dc8c2;
+  background-color: #0091EA;
+  border-color: #0091EA;
   border-radius: 0px;
 }
 .navbar-default .navbar-toggle .icon-bar {
@@ -154,7 +158,7 @@ table a {
   margin-bottom: 30px;
 }
 footer {
-  background-color: #2dc8c2;
+  background-color: #00385A;
   color: #ffffff;
   padding: 40px 0;
   font-size: 12px;
@@ -354,4 +358,11 @@ table .fa-pencil-square-o, table .fa-trash {
 .dropdown-menu.dropdown-menu-button {
   padding: 10px;
   min-width: 228px;
+}
+.benefits{
+  margin: 50px 0;
+  text-align: center;
+}
+.benefits p {
+  color: #436B83;
 }
