--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -34,95 +34,28 @@
     </div>
 <% end %>
 <% end %>
-
-<div class="row mb40">
-	<div class="col-md-12">
-		<h2 class="text-center">Explore the Features</h2>
-	</div>
-</div>
-<div class="row mb20">
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "1.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3><a href="/steps/step1">Step 01</a></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
+<div class="benefits">
+	<div class="row mb50">
+		<div class="col-md-12">
+			<h2>Benefits</h2>
 		</div>
 	</div>
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "2.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Phasellus convallis ipsum non</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
+	<div class="row">
+		<div class="col-md-3">
+			<p><%= image_tag "1.png" %></p>
+			<p>Effective use for your resources</p>
 		</div>
-	</div>
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "3.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Phasellus convallis ipsum non</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
+		<div class="col-md-3 ">
+			<p><%= image_tag "2.png" %></p>
+			<p>Minimize risks and maximize opportunities</p>
 		</div>
-	</div>
-</div>
-<div class="row mb20">
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "4.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Phasellus convallis ipsum non</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
+		<div class="col-md-3">
+			<p><%= image_tag "3.png" %></p>
+			<p>Align advocacy width other areas and organization goals, both long and short term</p>
 		</div>
-	</div>
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "5.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Phasellus convallis ipsum non</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
+		<div class="col-md-3">
+			<p><%= image_tag "4.png" %></p>
+			<p>Keep track and evaluate your performance</p>
 		</div>
-	</div>
-	<div class="col-md-4">
-		<p class="text-center"><%= image_tag "6.png" %></p>
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Phasellus convallis ipsum non</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="row mtb40">
-	<div class="col-md-12">
-		<h2 class="text-center">Examples</h2>
-	</div>
-</div>
-<div class="row mb40">
-	<div class="col-md-4">
-		<a class="thumbnail" href="#">
-        <img src="http://placehold.it/390x290" alt="Example 1">
-      	</a>
-		<h3>Phasellus convallis ipsum non</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-	</div>
-	<div class="col-md-4">
-		<a class="thumbnail" href="#">
-        <img src="http://placehold.it/390x290" alt="Example 1">
-      	</a>
-		<h3>Phasellus convallis ipsum non</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
-	</div>
-	<div class="col-md-4">
-		<a class="thumbnail" href="#">
-        <img src="http://placehold.it/390x290" alt="Example 1">
-      	</a>
-		<h3>Phasellus convallis ipsum non</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 	</div>
 </div>
