--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -141,12 +141,13 @@ table a {
   text-decoration: underline;
 }
 .breadcrumb {
-  padding: 15px;
-  font-size: 16px;
+  font-size: 14px;
   background-color: #e5e5e5;
+  color: #00A4EE;
+  font-weight: 300;
 }
 .breadcrumb a {
-  color: #7f8c8c;
+  color: #B7B7B7;
 }
 .breadcrumb_bg {
   background-color: #e5e5e5;
@@ -157,7 +158,7 @@ table a {
 .breadcrumb>li+li:before {
   content: ">\00a0";
   padding: 0 5px;
-  color: #7f8c8c;
+  color: #B7B7B7;
 }
 .main {
   margin-bottom: 30px;
